Create FontList activity This acitivity reads the fonts from a text file in assets, stores the data into an ArrayList, and a ListView loads based on this list. When user clicks on list item the string value is taken and passed through a method to remove any spaces. From here the font string value can be put into a generic url which will point to the location of the files for that specific font.